feat: add withdrawn messsages back in
OCD-4088